@@ -47,7 +47,8 @@
                 <syspropertyset refid="test.@{test.type}.properties"/>
                 <jvmarg line="${test.bootclasspath.prepend.args}"/>
                 <jvmarg line="${test.run.args}"/>
-                <jvmarg line="-Xmx1024m"/>
+                <!--  should be in sync with project.properties and build.xml of autopsy main project -->
+                <jvmarg line="-J-Xms24m -J-Xmx768m -J-XX:MaxPermSize=256M -J-Xverify:none"/>
                 <sysproperty key="img_path" value="${img_path}"/>
                 <sysproperty key="gold_path" value="${gold_path}"/>
                 <sysproperty key="out_path" value="${out_path}"/>
